# robot_control

./: plot_log_viewer.py  plot_log_viewer_old.py  plot_log_viewer_simple.py  readme.md  readme_old.md
arm_controller/: CMakeLists.txt  README.md  package.xml
arm_controller/config/: arm_controllers.yaml
arm_controller/launch/: controllers.launch.py
arm_description/: CMakeLists.txt  README.md  package.xml
arm_description/info/: README.md  robot_info.py
arm_description/launch/: arm_launch.py  gazebo.launch.py  rviz_launch.py
arm_description/rviz/: config.rviz
arm_description/urdf/: Kikobot.urdf  Kikobot.urdf.xacro  arm.urdf.xacro
arm_description/urdf/meshes/: Arm-2.stl  Arm-4.stl  End-Coupler-v1.stl
arm_kinematics/: CMakeLists.txt  package.xml  readme.md
arm_kinematics/launch/: gui_ee.launch.py  kinematics.launch.py
arm_kinematics/log_data/: stroke_0001.csv
arm_kinematics/src/: demo_plan_publish.py  gui_ee.py  ik_service.py  motion_logger.py  trajectory_executor.py  trajectory_service.py
arm_kinematics/srv/: ComputeIK.srv  PlanJointTrajectory.srv
arm_motion/: CMakeLists.txt  README.md  package.xml
arm_motion/launch/: motion.launch.py
arm_motion/src/: motion_node.py
arm_pykdl/: CMakeLists.txt  README.md  package.xml
arm_pykdl/launch/: ik_service.launch.py
arm_pykdl/src/: ik_service_cpp.cpp
kdl_cplusplus/: CMakeLists.txt  README.md  README_old.md  package.xml
kdl_cplusplus/launch/: ik_service.launch.py
kdl_cplusplus/scripts/: ik_test_client.py
kiko_description/: CMakeLists.txt  package.xml
kiko_description/info/: README.md
kiko_description/launch/: rviz_launch.py
kiko_description/urdf/: Kikobot.urdf
kiko_description/urdf/meshes/: Arm-1.stl  Arm-3.stl  Arm-5.stl  Base.stl
